tests/paczka1/fuzzy1/48617191.err
Error in line 5: 6svuGvQr S196 19,3
Error in line 23: fWVdYKzHRfn S697 55,6
Error in line 33: HEn S469 80,1
